// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the summary with items correctly 1`] = `
<p>
  Viewing 
  3
   expense
  s
   totalling 
  € 1.141,95
</p>
`;

exports[`should render the summary without items correctly 1`] = `
<p>
  Viewing 
  0
   expense
  s
   totalling 
  € 0,00
</p>
`;
